--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -7,10 +7,11 @@ $background-opacity : 0.9;
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');    
+@import url('https://fonts.googleapis.com/css?family=Oxygen');
 
 // Transition and Background Mixins
 @mixin easeOut {
-    transition: all 0.5s ease-out;
+    transition: all 0.3s ease-out;
 }
 
 @mixin background {
