description & footer done

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,7 @@
 // Color and Image Variables
 $primary-color: #111;
 $secondary-color: #00bfff;
+$text-color: #999;
 $show-home-image: true;
 $home-image: url(../img/photo.jpeg);
 $background-opacity : 0.9;
