--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .wrapper {
-    width: 65%;
+    width: 60%;
     margin: 0 auto;
 }
 
@@ -30,7 +30,7 @@ body {
 
     a {
         line-height: 60px;
-        color: #999;
+        color: $text-color;
         padding: 10px 20px;
         text-decoration: none;
         text-transform: uppercase;
@@ -78,8 +78,9 @@ body {
             border: 2px solid #fff;
             display: inline-block;
             border-radius: 50px;
-            width: 31px;
-            height: 31px;
+            margin: 0 2px;
+            width: 30px;
+            height: 30px;
             text-align: center;
             color: #fff;
             @include easeOut;
@@ -91,7 +92,7 @@ body {
         }
 
         i {
-            font-size: 0.8rem;
+            font-size: .9rem;
         }
     }
 
@@ -109,5 +110,46 @@ body {
             background: #fff;
             color: #333;
         }   
+    }
+}
+
+// Information About Company
+.info-section {
+    hr {
+        background-color: #555;
+    }
+
+    p {
+        color: #ccc;
+        padding: 4vh 0;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 1.1rem;
+        letter-spacing: 1px;
+    }
+}
+
+// Footer with Company's Social Media Links
+footer {
+    margin-top: 300px;
+    text-align: center;
+
+    a {
+        border: 2px solid #fff;
+        display: inline-block;
+        border-radius: 50px;
+        width: 30px;
+        height: 30px;
+        margin: 0 3px;
+        text-align: center;
+        background: #fff;
+        color: #333;
+        @include easeOut;
+
+        &:hover {
+        }
+    }
+
+    i {
+        font-size: 1rem;
     }
 }
