--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -36,3 +36,34 @@ $background-opacity : 0.9;
         }
     }
 }
+
+// Responsive 
+@mixin mediaXs {
+    @media screen and (max-width: 320px) {
+        @content;
+    }
+}
+
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mediaLg {
+    @media screen and (min-width: 769px) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+@mixin mediaXl {
+    @media screen and (min-width: 1500px) {
+        @content;
+    }
+}
