--- a/scss/main.scss
+++ b/scss/main.scss
@@ -129,8 +129,8 @@ body {
 }
 
 // Footer with Company's Social Media Links
-footer {
-    margin-top: 300px;
+.footer {
+    margin-top: 30vh;
     text-align: center;
 
     a {
