--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -20,7 +20,8 @@ $background-opacity : 0.9;
         &#bg-img {
             background: $home-image;
             background-attachment: fixed;
-            background-size: cover;
+            background-size: auto;
+            background-repeat: no-repeat;
 
             &:after {
                 content: '';
@@ -29,6 +30,29 @@ $background-opacity : 0.9;
                 right: 0;
                 width: 100%;
                 height: 100%;
+                z-index: -1;
+                background: rgba($primary-color, 
+                    $background-opacity);
+            }
+        }
+    }
+}
+
+@mixin background-Sm {
+    @if $show-home-image {
+        &#bg-img {
+            background: $home-image;
+            background-attachment: fixed;
+            background-size: auto;
+            background-repeat: no-repeat;
+
+            &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 100%;
+                height: 130%;
                 z-index: -1;
                 background: rgba($primary-color, 
                     $background-opacity);
